--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
+body {
+  padding: 2.5% 5% 2.5% 5%;
+  background-color: #ff69b4a0;
+}
+
+#root {
+  /* padding: 2.5% 5%; */
+  /* background-color: #ff69b4a0; */
+}
+
+.app {
   text-align: center;
+  background-color: #ffd0e8;
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+  max-height: 90dvh;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -6px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.upper-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 40dvh;
+  width: 100%;
+  background: rgba(174, 0, 255, 0.333);
+  box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+  border: 2px solid #33333333;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.lower-container {
+  height: 40dvh;
+  width: 100%;
+  padding: 2.5% 5%;
 }
